2006-07-31  Stefan Siegl  <stesie@brokenpipe.de>

	* options.c (trivfs_append_args): Figure out the address of the default
	gateway and push the --gateway option to argz.

2006-04-27  Thomas Schwinge  <tschwinge@gnu.org>

	* ethernet.c (ether_filter) [NETF_IN]: Prefix `NETF_IN' to the actual
	rules.

2006-03-15  Thomas Schwinge  <tschwinge@gnu.org>

	* glue-include/asm/system.h (xchg): Fix invalid lvalue.
	* linux-src/net/ipv4/tcp_ipv4.c (tcp_v4_rst_req): Don't use ?: as a
	lvalue.

2004-09-03  Alfred M. Szmidt  <ams@kemisten.nu>

	* linux-src/net/ipv4/udp.c (udp_v4_get_port): Put empty statement
	after label to silence compiler warning.
	* linux-src/net/ipv4/tcp_ipv4.c
	(tcp_v4_get_port, tcp_v4_connect, tcp_v4_rcv): Likewise.
	* linux-src/net/ipv4/route.c (ip_rt_redirect): Likewise.
	* linux-src/net/ipv4/arp.c (arp_constructor): Likewise.

2004-02-10  Roland McGrath  <roland@frob.com>

	* linux-src/arch/i386/lib/checksum.S: Fix comment syntax.

2003-05-07  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* linux-src/include/asm-i386/checksum.h (ip_fast_csum): Use
	string literals concatenation instead of multi-line string
	literal.
	(csum_fold): Likewise.
	(csum_tcpudp_nofold): Likewise.
	(csum_ipv6_magic): Likewise.

	* linux-src/include/net/sock.h (SOCK_DEBUG): Don't use ## to
	concatenate string literals.

2002-09-17  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile: Revert last change.
	* glue-include/asm/spinlock.h (SPIN_LOCK_UNLOCKED): Do not use a
	compound literal, which is not constant.

	* Makefile: For now, filter -std=gnu99 out of CPPFLAGS.

2002-06-15  Roland McGrath  <roland@frob.com>

	* socket-ops.c (S_socket_getopt): Use a local int for result param of
	getsockopt hook function.

2002-06-13  Roland McGrath  <roland@frob.com>

	* tunnel.c (trivfs_S_io_read): off_t -> loff_t
	(trivfs_S_io_map): Add reply port args.
	(trivfs_S_io_read): Fix argument types.  Check mmap for failure.

	* pfinet.h (trivfs_protid_t): Type removed (now in trivfs.h).
