@@ -1,3 +1,8 @@
+2007-07-27  Thomas Schwinge  <tschwinge@gnu.org>
+
+	[bug #17124 -- ``-fno-strict-aliasing for pfinet'']
+	* Makefile (CFLAGS): Add ``-fno-strict-aliasing''.
+
 2006-07-31  Stefan Siegl  <stesie@brokenpipe.de>
 
 	* options.c (trivfs_append_args): Figure out the address of the default
